Tests/a1/reject/31.ul
int main (int x) {
	if (x ==3) {
	
	}
